--- a/MotoActions/res/values-es/strings.xml
+++ b/MotoActions/res/values-es/strings.xml
@@ -17,6 +17,7 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+  <string name="moto_actions_title">Acciones Moto</string>
   <!-- Label for feature switch [CHAR LIMIT=30] -->
   <string name="switch_bar_on">Activado</string>
   <!-- Label for feature switch [CHAR LIMIT=30] -->
@@ -25,6 +26,7 @@
   <string name="device_settings_app_name">Ajustes avanzados</string>
   <!-- Device gestures panel -->
   <string name="screen_gestures_panel_title">Gestos</string>
+  <string name="screen_gestures_panel_summary">Gestionar gestos del dispositivo</string>
   <!-- Touchscreen gesture haptic feedback -->
   <string name="touchscreen_gesture_extras">Extras</string>
   <string name="touchscreen_gesture_haptic_feedback">Respuesta háptica</string>
